docs(citros_template/notebooks): finish notebook for double pendulum

--- a/citros_template/notebooks/system_with_spring.ipynb
+++ b/citros_template/notebooks/system_with_spring.ipynb
@@ -653,7 +653,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).topic('/coordinates').data()"
+    "F = citros.batch(-1).topic('/coordinates').data()\n",
+    "x0 = citros.batch(-1).topic('/config').data('data.system_with_spring.ros__parameters.x0')['data.system_with_spring.ros__parameters.x0'][0]"
    ]
   },
   {
@@ -676,53 +677,53 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import deque\n",
     "\n",
-    "max_y = max(abs(F['data.p2.y']))*1.2\n",
-    "fig = plt.figure(figsize = (6,6))\n",
-    "ax = fig.add_subplot(111, autoscale_on=False, xlim=(-max_y, max_y), ylim=(-max_y, 0.1))\n",
-    "ax.set_aspect('equal', 'datalim')\n",
-    "ax.grid()\n",
+    "def animate(F, x0):\n",
     "\n",
-    "# length of the history trace\n",
-    "trace_len = 100\n",
-    "line1, = ax.plot([], [], 'o-', lw=2)\n",
-    "line2, = ax.plot([], [], 'o-', lw=2)\n",
-    "line3, = ax.plot([], [], 'o-', lw=2)\n",
-    "line4, = ax.plot([], [], 'm--', lw=1)\n",
-    "trace, = ax.plot([], [], 'b-', lw=0.5, ms=1)\n",
-    "time_text = ax.text(0.02, 0.90, '', transform=ax.transAxes)\n",
-    "trace_x, trace_y = deque(maxlen=trace_len), deque(maxlen=trace_len)\n",
+    "    # length of the history trace\n",
+    "    trace_len = 100\n",
     "\n",
-    "x0 = citros.batch(-1).topic('/config').data('data.system_with_spring.ros__parameters.x0')['data.system_with_spring.ros__parameters.x0'][0]\n",
+    "    max_y = max(abs(F['data.p2.y']))*1.2\n",
+    "    fig = plt.figure(figsize = (6,6))\n",
+    "    ax = fig.add_subplot(111, autoscale_on=False, xlim=(-max_y, max_y), ylim=(-max_y, 0.1))\n",
+    "    ax.set_aspect('equal', 'datalim')\n",
+    "    ax.grid()\n",
     "\n",
-    "plt.close()\n",
-    "def init():\n",
-    "    line1.set_data([], [])\n",
-    "    line2.set_data([], [])\n",
-    "    trace.set_data([], [])\n",
-    "    line3.set_data([], [])\n",
-    "    line4.set_data([], [])\n",
-    "    time_text.set_text('')\n",
-    "    trace_x.clear()\n",
-    "    trace_y.clear()\n",
-    "    return line1, line2, trace, time_text\n",
+    "    line1, = ax.plot([], [], 'o-', lw=2)\n",
+    "    line2, = ax.plot([], [], 'o-', lw=2)\n",
+    "    line3, = ax.plot([], [], 'o-', lw=2)\n",
+    "    line4, = ax.plot([], [], 'm--', lw=1)\n",
+    "    trace, = ax.plot([], [], 'b-', lw=0.5, ms=1)\n",
+    "    time_text = ax.text(0.02, 0.90, '', transform=ax.transAxes)\n",
+    "    trace_x, trace_y = deque(maxlen=trace_len), deque(maxlen=trace_len)\n",
     "\n",
-    "def animate(i):\n",
-    "    trace_x.appendleft(F['data.p2.x'].iloc[i])\n",
-    "    trace_y.appendleft(F['data.p2.y'].iloc[i])\n",
+    "    plt.close()\n",
+    "    def init():\n",
+    "        line1.set_data([], [])\n",
+    "        line2.set_data([], [])\n",
+    "        trace.set_data([], [])\n",
+    "        line3.set_data([], [])\n",
+    "        line4.set_data([], [])\n",
+    "        time_text.set_text('')\n",
+    "        trace_x.clear()\n",
+    "        trace_y.clear()\n",
+    "        return line1, line2, trace, time_text\n",
     "\n",
-    "    line1.set_data([[F['data.p1.x'].iloc[i],F['data.p2.x'].iloc[i]],[F['data.p1.y'].iloc[i], F['data.p2.y'].iloc[i]]])\n",
-    "    line2.set_data([[x0,F['data.p1.x'].iloc[i]],[0, F['data.p1.y'].iloc[i]]])\n",
-    "    line3.set_data([[0,F['data.p3.x'].iloc[i]],[0, F['data.p3.y'].iloc[i]]])\n",
-    "    line4.set_data([[F['data.spr.x0'].iloc[i],F['data.spr.x1'].iloc[i]],[F['data.spr.y0'].iloc[i], F['data.spr.y1'].iloc[i]]])\n",
-    "    trace.set_data(trace_x, trace_y)\n",
+    "    def animate_frame(i):\n",
+    "        trace_x.appendleft(F['data.p2.x'].iloc[i])\n",
+    "        trace_y.appendleft(F['data.p2.y'].iloc[i])\n",
     "\n",
-    "    time_text.set_text('Time = %.3f s' % F['data.t'].iloc[i])\n",
-    "    return line1, line2, line3, line4, trace, time_text\n",
+    "        line1.set_data([[F['data.p1.x'].iloc[i],F['data.p2.x'].iloc[i]],[F['data.p1.y'].iloc[i], F['data.p2.y'].iloc[i]]])\n",
+    "        line2.set_data([[x0,F['data.p1.x'].iloc[i]],[0, F['data.p1.y'].iloc[i]]])\n",
+    "        line3.set_data([[0,F['data.p3.x'].iloc[i]],[0, F['data.p3.y'].iloc[i]]])\n",
+    "        line4.set_data([[F['data.spr.x0'].iloc[i],F['data.spr.x1'].iloc[i]],[F['data.spr.y0'].iloc[i], F['data.spr.y1'].iloc[i]]])\n",
+    "        trace.set_data(trace_x, trace_y)\n",
     "\n",
-    "for i in range(len(F)):\n",
-    "    animate(i)\n",
+    "        time_text.set_text('Time = %.3f s' % F['data.t'].iloc[i])\n",
+    "        return line1, line2, line3, line4, trace, time_text\n",
     "\n",
-    "    display(fig, clear=True)"
+    "    for i in range(len(F)):\n",
+    "        animate_frame(i)\n",
+    "        display(fig, clear=True)"
    ]
   }
  ],
