--- a/citros_template/notebooks/double_pendulum.ipynb
+++ b/citros_template/notebooks/double_pendulum.ipynb
@@ -25,82 +25,65 @@
     "\n",
     "We conducted simulations of the double pendulum system with varying initial parameters:\n",
     "\n",
-    "- In the batch 'double_pendulum_angles' we varied the initial angles of the first pendulum by selecting values randomly from a normal distribution with a mean of 120 degrees and a standard deviation of 5 degrees.\n",
+    "- In the batch 'double_pendulum' we varied the initial angles of the first pendulum by selecting values randomly from a normal distribution with a mean of 120 degrees and a standard deviation of 5 degrees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from citros import CitrosDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create CitrosDB object to query and plot the results of the simulations.\n",
     "\n",
-    "- In the batch 'double_pendulum_vel' we varied the initial velocity of the second pendulum, choosing values randomly from a normal distribution with a mean of 90 degrees per second and a standard deviation of 5 degrees per second."
+    "You should specify name of the simulation scenario (`'simulation_double_pendulum'`) and the name of the batch:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import data_access as da"
+    "citros = CitrosDB(simulation = 'simulation_double_pendulum', batch = 'double_pendulum')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create CitrosDB object to query and plot the results of the simulations. Let's specify that we would like to see batches that were created with double pendulum simulation scenario:"
+    "Print general information about the batch. In this simulation we have two topics: '/config' and '/coordinates':"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      " 'size': '5440 bytes',\n",
+      " 'sid_count': 5,\n",
+      " 'sid_list': [0, 1, 2, 3, 4],\n",
+      " 'topic_count': 1,\n",
+      " 'topic_list': ['/config'],\n",
+      " 'message_count': 10\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "citros = da.CitrosDB(simulation = 'simulation_double_pendulum')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To print information about all batches created in 'simulation_double_pendulum' simulation, call `search_batch()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "citros.search_batch().print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's print the names of the batches containing simulations with the status 'DONE'. This indicates that the simulations have successfully finished:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(citros.search_batch(sid_status='DONE').keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Print general information about the most recent simulation. In this simulation we have two topics: '/config' and '/coordinates':"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "citros.batch(-1).info().print()"
+    "citros.info().print()"
    ]
   },
   {
@@ -112,11 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      " 'size': None,\n",
+      " 'sid_count': 0,\n",
+      " 'sid_list': [],\n",
+      " 'topic_count': 0,\n",
+      " 'topic_list': [],\n",
+      " 'message_count': 0,\n",
+      " 'topics': {\n",
+      " }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "citros.batch(-1).topic('/coordinates').info().print()"
+    "citros.topic('/coordinates').info().print()"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').info()['topics']['/coordinates']['data_structure']['data'].print()"
+    "citros.topic('/coordinates').info()['topics']['/coordinates']['data_structure']['data'].print()"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').data().head(5)"
+    "citros.topic('/coordinates').data().head(5)"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').data(['data.t', 'data.p2.x', 'data.p2.y']).head(5)"
+    "citros.topic('/coordinates').data(['data.t', 'data.p2.x', 'data.p2.y']).head(5)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "name = 'data.double_pendulum.ros__parameters'\n",
-    "params = citros.batch(-1).topic('/config').data(name, additional_columns='sid')\n",
+    "params = citros.topic('/config').data(name, additional_columns='sid')\n",
     "params = params[params[name].notna()].set_index('sid')[name]\n",
     "\n",
     "print(f\"pandas.Series with initial parameters for the simulation runs:\\n{params}\")\n",
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).sid(0).set_filter({'data.t': {'<=': 5}}).topic('/coordinates').data()"
+    "F = citros.sid(0).set_filter({'data.t': {'<=': 5}}).topic('/coordinates').data()"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).sid(0).skip(5).set_filter({'data.t': {'<=': 5}}).topic('/coordinates').data()\n",
+    "F = citros.sid(0).skip(5).set_filter({'data.t': {'<=': 5}}).topic('/coordinates').data()\n",
     "animate(F)"
    ]
   },
@@ -309,7 +309,7 @@
    "source": [
     "col_name = 'data.double_pendulum.ros__parameters.a1_0'\n",
     "\n",
-    "a1_0 = citros.batch(-1).topic('/config').data(col_name, additional_columns='sid').rename({col_name: 'a1_0'}, axis = 1)\n",
+    "a1_0 = citros.topic('/config').data(col_name, additional_columns='sid').rename({col_name: 'a1_0'}, axis = 1)\n",
     "a1_0 = a1_0 [a1_0 ['a1_0'].notna()].set_index('sid')\n",
     "a1_0"
    ]
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).topic('/coordinates').data()\n",
+    "F = citros.topic('/coordinates').data()\n",
     "citros.plot_graph(F, 'data.p2.x', 'data.p2.y')"
    ]
   },
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).topic('/coordinates').sid([1,2]).data()\n",
+    "F = citros.topic('/coordinates').sid([1,2]).data()\n",
     "citros.plot_graph(F, 'data.p2.x', 'data.p2.y')"
    ]
   },
@@ -354,7 +354,7 @@
    "source": [
     "## Statistics\n",
     "\n",
-    "We can examine how the coordinates of the second pendulum, along with their mean values and standard deviations, change over time using the `citros_data_analysis.error_analysis` package:"
+    "We can examine how the coordinates of the second pendulum, along with their mean values and standard deviations, change over time:"
    ]
   },
   {
@@ -363,10 +363,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import error_analysis as analysis\n",
+    "from citros import CitrosData\n",
     "\n",
-    "F = citros.batch(-1).topic('/coordinates').data()\n",
-    "dataset = analysis.CitrosData(F, data_label=['data.p2.x', 'data.p2.y'], units = 'm')\n",
+    "F = citros.topic('/coordinates').data()\n",
+    "dataset = CitrosData(F, data_label=['data.p2.x', 'data.p2.y'], units = 'm')\n",
     "db = dataset.bin_data(n_bins = 50, param_label = 'data.t')\n",
     "db.show_statistics()"
    ]
@@ -395,7 +395,7 @@
    "source": [
     "## Standard Deviation Boundary Test\n",
     "\n",
-    "By utilizing different tests from the `citros_data_analysis.validation` package, you can quickly determine whether the simulation meets specific conditions. For instance, let's verify if the standard deviation remains within certain limits. Suppose we want to check if the mean value of the coordinates for the second pendulum, along with its 1-sigma standard deviation boundary, falls within a 2.5 x 2.5 box for the 'double_pendulum_angle' batch:"
+    "By utilizing different tests we can quickly determine whether the simulation meets specific conditions. For instance, let's verify if the standard deviation remains within certain limits. Suppose we want to check if the mean value of the coordinates for the second pendulum, along with its 1-sigma standard deviation boundary, falls within a 2.5 x 2.5 box for the 'double_pendulum_angle' batch:"
    ]
   },
   {
@@ -404,21 +404,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import validation as va\n",
+    "from citros import Validation\n",
     "\n",
-    "F = citros.batch(-1).topic('/coordinates').data()\n",
-    "V = va.Validation(F, data_label = ['data.p2.x', 'data.p2.y'], param_label = 'data.t', method = 'bin', num = 50, units = 'm')\n",
+    "F = citros.topic('/coordinates').data()\n",
+    "V = Validation(F, data_label = ['data.p2.x', 'data.p2.y'], param_label = 'data.t', method = 'bin', num = 50, units = 'm')\n",
     "log, table, fig = V.std_bound_test(limits = 2.5, n_std = 1, std_area = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref = da.Ref()\n",
-    "ref.print()"
    ]
   }
  ],
