--- a/citros_template/notebooks/system_with_spring.ipynb
+++ b/citros_template/notebooks/system_with_spring.ipynb
@@ -32,14 +32,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import data_access as da"
+    "from citros import CitrosDB\n",
+    "\n",
+    "batch_name = 'pendulum_with_spring'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create CitrosDB object to query and plot the results of the simulation. Let's specify that we would like to see batches that were created with system with spring simulation scenario:"
+    "Let's create CitrosDB object to query and plot the results of the simulation. \n",
+    "\n",
+    "Let's specify the simulation name (`'simulation_system_with_spring'`) and the name of the batch:"
    ]
   },
   {
@@ -48,39 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros = da.CitrosDB(simulation = 'simulation_system_with_spring')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To print information about all batches created in 'simulation_double_pendulum' simulation, call `search_batch()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "citros.search_batch()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's display the names of the batches that contain simulations marked as 'DONE', signifying their successful completion:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(citros.search_batch(sid_status='DONE').keys())"
+    "citros = CitrosDB(simulation = 'simulation_system_with_spring', batch = batch_name)"
    ]
   },
   {
@@ -96,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).info().print()"
+    "citros.info().print()"
    ]
   },
   {
@@ -112,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').info().print()"
+    "citros.topic('/coordinates').info().print()"
    ]
   },
   {
@@ -128,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').info()['topics']['/coordinates']['data_structure']['data'].print()"
+    "citros.topic('/coordinates').info()['topics']['/coordinates']['data_structure']['data'].print()"
    ]
   },
   {
@@ -150,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').data().head(5)"
+    "citros.topic('/coordinates').data().head(5)"
    ]
   },
   {
@@ -166,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citros.batch(-1).topic('/coordinates').data(['data.t', 'data.p1.x', 'data.p2.x', 'data.p3.x']).head(5)"
+    "citros.topic('/coordinates').data(['data.t', 'data.p1.x', 'data.p2.x', 'data.p3.x']).head(5)"
    ]
   },
   {
@@ -185,7 +157,7 @@
    "outputs": [],
    "source": [
     "name = 'data.system_with_spring.ros__parameters'\n",
-    "params = citros.batch(-1).topic('/config').data(name, additional_columns='sid')\n",
+    "params = citros.topic('/config').data(name, additional_columns='sid')\n",
     "params = params[params[name].notna()].set_index('sid')[name]\n",
     "\n",
     "print(f\"pandas.Series with initial parameters for the simulation runs:\\n{params}\")"
@@ -205,7 +177,7 @@
    "outputs": [],
    "source": [
     "name = 'data.system_with_spring.ros__parameters.a2_0'\n",
-    "a2_0 = citros.batch(-1).topic('/config').data(name, additional_columns='sid').rename({name: 'a2_0'}, axis = 1)\n",
+    "a2_0 = citros.topic('/config').data(name, additional_columns='sid').rename({name: 'a2_0'}, axis = 1)\n",
     "a2_0 = a2_0[a2_0['a2_0'].notna()]\n",
     "print(f\"\\ninitial angles for the second pendulum:\\n{a2_0['a2_0']}\")"
    ]
@@ -225,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).sid(0).topic('/coordinates').data()\n",
+    "F = citros.sid(0).topic('/coordinates').data()\n",
     "x0 = params[0]['x0']"
    ]
   },
@@ -312,7 +284,7 @@
    "source": [
     "col_name = 'data.system_with_spring.ros__parameters.a2_0'\n",
     "\n",
-    "a2_0 = citros.batch(-1).topic('/config').data(col_name, additional_columns='sid').rename({col_name: 'a2_0'}, axis = 1)\n",
+    "a2_0 = citros.topic('/config').data(col_name, additional_columns='sid').rename({col_name: 'a2_0'}, axis = 1)\n",
     "a2_0 = a2_0 [a2_0 ['a2_0'].notna()].set_index('sid')\n",
     "a2_0"
    ]
@@ -330,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).set_filter({'data.t': {'<': 5}}).topic('/coordinates').data()\n",
+    "F = citros.set_filter({'data.t': {'<': 5}}).topic('/coordinates').data()\n",
     "citros.plot_graph(F, 'data.p2.x', 'data.p2.y')"
    ]
   },
@@ -347,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = citros.batch(-1).set_filter({'data.t': {'<': 5}}).topic('/coordinates').sid([0,1]).data()\n",
+    "F = citros.set_filter({'data.t': {'<': 5}}).topic('/coordinates').sid([0,1]).data()\n",
     "citros.plot_graph(F, 'data.p2.x', 'data.p2.y')"
    ]
   },
@@ -357,7 +329,7 @@
    "source": [
     "## Statistics\n",
     "\n",
-    "We can examine how the coordinates of the second pendulum, along with their mean values and standard deviations, change over time using the `citros_data_analysis.error_analysis` package:"
+    "We can examine how the coordinates of the second pendulum, along with their mean values and standard deviations, change over time:"
    ]
   },
   {
@@ -366,9 +338,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import error_analysis as analysis\n",
-    "F = citros.batch(-1).topic('/coordinates').data()\n",
-    "dataset = analysis.CitrosData(F, data_label=['data.p2.x', 'data.p2.y'], units = 'm')\n",
+    "from citros import CitrosData\n",
+    "F = citros.topic('/coordinates').data()\n",
+    "dataset = CitrosData(F, data_label=['data.p2.x', 'data.p2.y'], units = 'm')\n",
     "db = dataset.bin_data(n_bins = 50, param_label = 'data.t')\n",
     "db.show_statistics()"
    ]
@@ -397,7 +369,7 @@
    "source": [
     "## Standard Deviation Test\n",
     "\n",
-    "By utilizing different tests from the `citros_data_analysis.validation` package, you can quickly determine whether the simulation meets specific conditions. For instance, let's check if the 3-sigma standard deviation does not exceed 0.15 for x coordinate and less then 0.1 for y coordinate:"
+    "By utilizing different tests we can quickly determine whether the simulation meets specific conditions. For instance, let's check if the 3-sigma standard deviation does not exceed 0.15 for x coordinate and less then 0.1 for y coordinate:"
    ]
   },
   {
@@ -406,20 +378,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citros_data_analysis import validation as va\n",
-    "F = citros.batch(-1).topic('/coordinates').data()\n",
-    "V = va.Validation(F, data_label = ['data.p2.x', 'data.p2.y'], param_label = 'data.t', method = 'bin', num = 50, units = 'm')\n",
+    "from citros import Validation\n",
+    "F = citros.topic('/coordinates').data()\n",
+    "V = Validation(F, data_label = ['data.p2.x', 'data.p2.y'], param_label = 'data.t', method = 'bin', num = 50, units = 'm')\n",
     "log, table, fig = V.std_test(limits = [0.15, 0.1], n_std = 3, std_area = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref = da.Ref()\n",
-    "ref.print()"
    ]
   }
  ],
